# rxeditor

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/lib/: document.rs  mod.rs  texteditor.rs  texthistory.rs
src/ui/: mod.rs  rxeditor.slint  rxeditor_view.rs  utils.rs
